--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   http: ^0.13.5
   flutter_secure_storage:  ^8.0.0
   provider: ^6.0.5
+  l10n_flutter: ^1.0.0
 
 dev_dependencies:
   flutter_test:
@@ -43,7 +44,7 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-
+  generate: true
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
