--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_secure_storage:  ^8.0.0
   provider: ^6.0.5
   l10n_flutter: ^1.0.0
+  card_swiper : ^2.0.1
 
 dev_dependencies:
   flutter_test:
