--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   provider: ^6.0.5
   l10n_flutter: ^1.0.0
   card_swiper : ^2.0.1
+  image_picker: ^0.8.7
+  image_cropper: ^2.0.3
 
 dev_dependencies:
   flutter_test:
